--- a/register/style.css
+++ b/register/style.css
@@ -13,6 +13,7 @@ body {
     background-position: center;
     filter: blur(5px) brightness(0.5);
     z-index: -1;
+    transform: scale(1.2);
 }
 .container {
     max-width: 400px;
